--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-  "dev": "vercel dev",
-  "start": "node api/index.js"
-},
+  "start": "node server.js"
+}
+,
   "keywords": [],
   "author": "",
   "license": "ISC",
