--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-  "start": "node server.js"
+  "start": "node server.js",
+  "postinstall": "npm rebuild bcrypt --build-from-source"
 }
+
+
 ,
   "keywords": [],
   "author": "",
