--- a/package.json
+++ b/package.json
@@ -4,23 +4,21 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-  "start": "node server.js",
-  "postinstall": "npm rebuild bcrypt --build-from-source"
-  },
+  "start": "node server.js"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0",
-    "mysql2": "^3.14.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.9"
-  }
+  "bcryptjs": "^2.4.3",
+  "cors": "^2.8.5",
+  "dotenv": "^16.4.7",
+  "express": "^5.1.0",
+  "jsonwebtoken": "^9.0.2",
+  "morgan": "^1.10.0",
+  "mysql2": "^3.14.0"
+},
+"devDependencies": {
+  "nodemon": "^3.1.9"
+}
 }
