--- a/.env
+++ b/.env
@@ -3,10 +3,11 @@ PORT=4000
 NODE_ENV=development
 
 # Database Configuration
-DB_HOST=localhost
+DB_HOST=mysql.railway.internal
 DB_USER=root
-DB_PASSWORD=abcd1234
-DB_NAME=leaflinkapp_db
+DB_PASSWORD=zBNJYfwyQdDrHnwTHkdmkXrwTpjmpkFL
+DB_NAME=railway
+DB_PORT=3306
 
 # JWT Secret for Authentication
 JWT_SECRET=your_jwt_secret_key_here
