--- a/.env
+++ b/.env
@@ -3,11 +3,13 @@ PORT=4000
 NODE_ENV=development
 
 # Database Configuration
-DB_HOST=mysql.railway.internal
-DB_USER=root
-DB_PASSWORD=zBNJYfwyQdDrHnwTHkdmkXrwTpjmpkFL
-DB_NAME=railway
-DB_PORT=3306
+DB_HOST=leaflinkapp-db.database.windows.net
+DB_USER=Shalika29
+DB_PASSWORD=ASDasd@ASD1
+DB_NAME=leaflinkapp_db
+DB_PORT=1433
+DB_DIALECT=mssql
+DB_ENCRYPT=true
 
 # JWT Secret for Authentication
 JWT_SECRET=your_jwt_secret_key_here
