location send to db

--- a/.env
+++ b/.env
@@ -14,3 +14,9 @@ DB_ENCRYPT=true
 # JWT Secret for Authentication
 JWT_SECRET=your_jwt_secret_key_here
 JWT_EXPIRES_IN=7d
+
+
+PUSHER_APP_ID=1993072
+PUSHER_KEY=04b459376799d9c622c3
+PUSHER_SECRET=d3776dd2a46a32da59d4
+PUSHER_CLUSTER=ap2
